# Embedded_System_Projects

Simons_Game_rpi-pico/: CmakeLists.txt  debounce.cpp  debounce.hpp  main.cpp
Simons_Game_rpi-pico/.cache/clangd/index/: debounce.cpp.9553FE3497D2762A.idx  debounce.hpp.539ECF3BF8DD95FA.idx  main.cpp.A07C08C77671059A.idx
Temperature_Sensor_TCN75A_rpi-pico/: CMakeLists.txt  config.cpp  config.hpp  core1.cpp  debounce.cpp  debounce.hpp  globals.hpp  gpio_callback.cpp  gpio_util.cpp  gpio_util.hpp  i2c_util.cpp  i2c_util.hpp  main.cpp  menu_handler.cpp  util.cpp  util.hpp
Tic_Tac_Toe_rpi-pico/: CMakeLists.txt  diagram.json  game.cpp  game.hpp  main.cpp
